--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,10 @@
 		"lsys/config" : "~2.1.0",
 		"lsys/core" : "~2.1.0"
 	},
+	"require-dev" : {
+		"phpunit/phpunit" : "~7.1.5",
+     	"php-coveralls/php-coveralls":"~v2.0.0"
+	},
 	"suggest": {
         "ext-uuid" : "*",
         "lsys/cli" : "~2.1.0"
