--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   
 before_install:
   - sudo apt-get install redis-server
+  - sudo service redis-server start
   - wget https://pecl.php.net/get/redis-4.1.0.tgz
     && tar zfvx redis-4.1.0.tgz
     && cd redis-4.1.0
